changed some small css issues for the phone dimensions the image was not covering the wholee screen. Implemented the logic for closing the side menu in the vase where 1 one of the main navigation menu btn is clicked it will close the side menu

--- a/my-portfolio/src/components/Sections/ContentSection/content-section.css
+++ b/my-portfolio/src/components/Sections/ContentSection/content-section.css
@@ -1,6 +1,4 @@
 .content-section {
   grid-row: 2/3;
   grid-column: 1/2;
-  height: 100%;
-  width: 100%;
 }
