--- a/my-portfolio/src/components/Sections/HeroSection/hero-section.css
+++ b/my-portfolio/src/components/Sections/HeroSection/hero-section.css
@@ -4,6 +4,8 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  height: 100%;
+  width: 100%;
 }
 
 .hero-bg-image {
@@ -17,6 +19,7 @@
   background-position: center;
   background-repeat: no-repeat;
   z-index: -1;
+  object-fit: cover;
 }
 
 /* .hero-section::before {
@@ -39,13 +42,7 @@
 
 @media only screen and (max-width: 900px) {
   .presentational-info {
-    margin: 6rem auto;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .presentational-info {
-    margin: 6rem auto;
+    margin: 6rem auto 0rem auto;
   }
 }
 
